--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Congregationalism -- Early works to 1800'
 - !lcsh 'Church of England -- Government -- Early works to 1800'
 - !lcsh 'Separatists -- England -- Early works to 1800'
+- GITenberg
 title: A Vindication of the Presbyteriall-Government and Ministry
 url: http://www.gutenberg.org/ebooks/44787
